certbot-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: certbot
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: certbot
